removed res.status(200), rebuild node modules

--- a/package.json
+++ b/package.json
@@ -17,5 +17,20 @@
   "devDependencies": {
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dina2703/next-mongodb-vercel.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Dina2703/next-mongodb-vercel/issues"
+  },
+  "homepage": "https://github.com/Dina2703/next-mongodb-vercel#readme"
 }
